2018-06-16  Werner Lemberg  <wl@gnu.org>

	[ftview] First shot at colored glyph layer support.

	This is basically a proof of concept.  Still missing: Switching off
	color layers and controlling palette selection.  Additionally, only
	`Render_All' handles color layers.

	Some code should be moved to `ftcommon' so that other demo programs
	can show colored glyph layers also.

	* src/ftview: Include FT_COLOR_H and FT_BITMAP_H.
	(Render_All): Handle colored glyph layers.

2018-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Control subpixel rendering from command line.

	* src/ftview.c (parse_cmdline): New `-L' option to set subpixel filter
	weights or geometry depending on the implemented method.
	(write_header, Process_Event): Hide filtering if not implemented.
	(main): Set default filter only if command line is not used.
	(usage): Document it.
	* src/ftview.1: Document it.

2018-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (benchmark): Output formatting.

2018-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Organize logging.

2018-05-27  Werner Lemberg  <wl@gnu.org>

	Separate color support from sbit handling.

	* src/ftcommon.h (FTDemo_Handle): New boolean field `use_color'.

	* src/ftcommon.c (FTDemo_New, FTDemo_Update_Current_Flags): Updated.

	* src/ftview.c (Process_Event): Use key `c' to toggle color support.
	(write_header, event_help): Updated.

2018-05-25  Werner Lemberg  <wl@gnu.org>

	Update manpages.

	* src/ftgrid.1, src/ftstring.1, stc/ftview: Document option `-d'.

2018-05-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement grayscale target surface.

	* graph/grblit.c (grBlitGlyphToBitmap): Enable gray target.
	* graph/gblblit.c (gblender_blit_init, GRGB_TO_GRAY, GRGB24_TO_GRAY):
	Implement gray target.

2018-05-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview, ftstring, ftgrid] Change dimension options.
